force-app/main/default/objects/X7S_Soft_Trigger_Disable__mdt/X7S_Soft_Trigger_Disable__mdt.object-meta.xml
<CustomObject>
    <label>7S Soft Trigger Disable</label>
    <pluralLabel>7S Triggers</pluralLabel>
</CustomObject>