force-app/main/default/objects/X7S_Soft_Trigger_Disable__mdt/fields/AfterDeleteActive__c.field-meta.xml
<CustomField>
    <fullName>AfterDeleteActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>After Delete Active</label>
    <type>Checkbox</type>
</CustomField>