force-app/main/default/objects/X7S_Soft_Trigger_Disable__mdt/fields/AfterInsertActive__c.field-meta.xml
<CustomField>
    <fullName>AfterInsertActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>After Insert Active</label>
    <type>Checkbox</type>
</CustomField>