force-app/main/default/objects/X7S_Soft_Trigger_Disable__mdt/fields/AfterUpdateActive__c.field-meta.xml
<CustomField>
    <fullName>AfterUpdateActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>After Update Active</label>
    <type>Checkbox</type>
</CustomField>