force-app/main/default/objects/X7S_Soft_Trigger_Disable__mdt/fields/BeforeUpdateActive__c.field-meta.xml
<CustomField>
    <fullName>BeforeUpdateActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Before Update Active</label>
    <type>Checkbox</type>
</CustomField>