force-app/main/default/objects/X7S_Soft_Trigger_Disable__mdt/fields/IsTestMode__c.field-meta.xml
<CustomField>
    <fullName>IsTestMode__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Test Mode</label>
    <type>Checkbox</type>
</CustomField>